# XY-Model

./: .gitignore  Cargo.toml  Notebook.ipynb  output.csv  output.sqlite-shm  output.sqlite-wal  output.sqlite.bak  output.sqlite?mode=rwc  sbatch.sh  script.jl
.cargo/: config.toml
migrations/: 20250103215725_schema.sql
report/: main.tex  refs.bib
report/sections/: appendix.tex  conclusion.tex  introduction.tex  numerical_methods.tex  results.tex
src/: arguments.rs  constants.rs  main.rs  utils.rs
src/algorithm/: metropolis.rs  mod.rs
src/analysis/: autocorrelation.rs  bootstrap.rs  mod.rs
src/lattice/: lattice_1d.rs  lattice_2d.rs  mod.rs
src/observables/: energy.rs  magnetization.rs  mod.rs
src/storage/: mod.rs  types.rs
