[package]
name = "XY-Model"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
lto = true
strip = false

[profile.release.package."*"]
opt-level = 3

[dependencies]
fastrand = { version = "2.3.0" }
rustfft = { version = "6.2.0" }
rayon = { version = "1.10.0" }
num-complex = { version = "0.4.6" }
rusqlite = { version = "=0.32.0", features = ["bundled"] }
wide = { version = "0.7.32", default-features = false, features = ["std"] }
clap = { version = "4.5.32", default-features = false, features = ["std", "derive", "help", "usage"] }
gethostname = { version = "1.0.0" }